# rust_cli_news_app

./: .gitignore  Cargo.toml
news_api/: .env  Cargo.toml
news_api/src/: lib.rs
src/: main.rs
